--- a/interactive/package.json
+++ b/interactive/package.json
@@ -11,6 +11,7 @@
   "author": "Joel Brady",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.1.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
