--- a/rust/parse/Cargo.toml
+++ b/rust/parse/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "problem3"
+name = "parse"
 version = "0.1.0"
 authors = ["Joel Brady <jbrady@atlassian.com>"]
 edition = "2018"
@@ -7,5 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parse = { path = "../../parse" }
 nom = "5.0.1"
