--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Joel Brady <joel.brady1@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-nom = "7.1.0"
-num-integer = "0.1.41"
-itertools = "0.10.1"
+nom = "=7.1.1"
+num-integer = "=0.1.45"
+itertools = "=0.10.5"
